--- a/templates/costos_de_contratacion.html
+++ b/templates/costos_de_contratacion.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Informe de Costos de Contratación</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../static/estilo_base.css">
-</head>
-<body>
+{% extends "base.html"%}
 
-    <!-- Barra de Navegación -->
-    <nav class="navbar navbar-expand-lg" style="background-color: var(--color-primario);">
-      <div class="container">
-        <a class="navbar-brand text-white" href="../index.html">Mi Empresa</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="nav-links">
-            <a href="index.html">🏠 Inicio</a>
-            <a href="#">⚙️ Configuración</a>
-            <a href="iniciar_sesion.html">🚪 Cerrar Sesión</a>
-        </div>
-      </div>
-    </nav>
+  {% block title %}Informe de Costos de Contratación{% endblock %}
+  
+  {% block content %}
 
     <div class="container my-5">
         <h1 class="text-center mb-4" style="color: var(--color-primario);">Informe de Costos de Contratación</h1>
@@ -153,6 +133,6 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+    {% endblock %}
 </body>
 </html>
