--- a/templates/empleados.html
+++ b/templates/empleados.html
@@ -1,34 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestión de Empleados</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../static/estilo_base.css">
-</head>
-<body>
-    <!-- Barra de Navegación -->
-    <nav class="navbar navbar-expand-lg" style="background-color: var(--color-primario);">
-      <div class="container">
-        <a class="navbar-brand text-white" href="../index.html">Mi Empresa</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="nav-links">
-          <a href="index.html">🏠 Inicio</a>
-          <a href="#">⚙️ Configuración</a>
-          <a href="iniciar_sesion.html">🚪 Cerrar Sesión</a>
-      </div>
-      </div>
-    </nav>
+{% extends "base.html"%}
+
+  {% block title %}Gestión de Empleados{% endblock %}
+  
+  {% block content %}
 
   <div class="container my-5">
     <h1 class="mb-4" style="color: var(--color-primario);">Gestión de Empleados</h1>
 
   <div class="d-flex align-items-center justify-content-between mb-3">
     <!-- Botón para Crear -->
-    <button type="button" class="btn mb-3" style="background-color: var(--color-primario); color: white;" data-bs-toggle="modal" data-bs-target="#modalEmpleado">
+    <button type="button" class="btn mb-3 btn-primary" data-bs-toggle="modal" data-bs-target="#modalEmpleado">
       + Crear Nuevo Empleado   <!-- En realidad se crean en "Persona", pero puede crearse directamente aqui, igual se hace una validacion por DNI para no crear uno que ya se encuentre en "Persona" con el "estado" de "Postulante", puede darse un mensaje como "Persona ya cargada como Postulante, desea cambiar su estado a Empleado?" -->
     </button>
 
@@ -79,8 +60,8 @@
             <td>Av. Flanders 1234, CABA</td>
             <td>Activo</td>
             <td>
-              <button class="btn btn-sm" style="background-color: var(--color-secundario); color: white;" data-bs-toggle="modal" data-bs-target="#modalEmpleado">Editar</button>
-              <button class="btn btn-sm" style="background-color: var(--color-enfasis); color: white;" data-bs-toggle="modal" data-bs-target="#modalVerEmpleado">Ver</button>
+              <button class="btn btn-sm btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEmpleado">Editar</button>
+              <button class="btn btn-sm btn-info" data-bs-toggle="modal" data-bs-target="#modalVerEmpleado">Ver</button>
               <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modalEliminarEmpleado">Eliminar</button>
             </td>
           </tr>
@@ -246,5 +227,6 @@
     });
   });
 </script>
+{% endblock %}
 </body>
 </html>
