--- a/templates/postulantes.html
+++ b/templates/postulantes.html
@@ -1,34 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestión de Postulantes</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../static/estilo_base.css">
-</head>
-<body>
-    <!-- Barra de Navegación -->
-    <nav class="navbar navbar-expand-lg" style="background-color: var(--color-primario);">
-      <div class="container">
-        <a class="navbar-brand text-white" href="../index.html">Mi Empresa</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="nav-links">
-          <a href="index.html">🏠 Inicio</a>
-          <a href="#">⚙️ Configuración</a>
-          <a href="iniciar_sesion.html">🚪 Cerrar Sesión</a>
-      </div>
-      </div>
-    </nav>
+{% extends "base.html"%}
+
+  {% block title %}Gestión de Postulantes{% endblock %}
+  
+  {% block content %}
 
   <div class="container my-5">
     <h1 class="mb-4" style="color: var(--color-primario);">Gestión de Postulantes</h1>
 
     <div class="d-flex align-items-center justify-content-between mb-3">
       <!-- Botón para Crear -->
-      <button type="button" class="btn mb-3" style="background-color: var(--color-primario); color: white;" data-bs-toggle="modal" data-bs-target="#modalPostulante">
+      <button type="button" class="btn mb-3 btn-primary" data-bs-toggle="modal" data-bs-target="#modalPostulante">
         + Crear Nuevo Postulante   <!-- En realidad se crean en "Persona", pero puede crearse directamente aqui, igual se hace una validacion por DNI para no crear uno que ya se encuentre en "Persona" con el "estado" de "Postulante", puede darse un mensaje como "Persona ya cargada como Postulante, desea cambiar su estado a Postulante?" -->
       </button>
 
@@ -76,8 +57,8 @@
             <td>Desarrollador Backend</td>
             <td>Pendiente</td>
             <td>
-              <button class="btn btn-sm" style="background-color: var(--color-secundario); color: white;" data-bs-toggle="modal" data-bs-target="#modalPostulante">Editar</button>
-              <button class="btn btn-sm" style="background-color: var(--color-enfasis); color: white;" data-bs-toggle="modal" data-bs-target="#modalVerPostulante">Ver</button>
+              <button class="btn btn-sm btn-secondary" data-bs-toggle="modal" data-bs-target="#modalPostulante">Editar</button>
+              <button class="btn btn-sm btn-info" data-bs-toggle="modal" data-bs-target="#modalVerPostulante">Ver</button>
               <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modalEliminarPostulante">Eliminar</button>
             </td>
           </tr>
@@ -245,5 +226,6 @@
     });
   });
 </script>
+{% endblock %}
 </body>
 </html>
